update records.json to postgresql

--- a/server/env.example
+++ b/server/env.example
@@ -1,6 +1,15 @@
 # ---------------- Server env example ----------------
 # Rename this file to `server/.env` (or copy/paste its contents) and fill in values.
 
+# PostgreSQL (required)
+# Example (local):
+# DATABASE_URL=postgres://postgres:postgres@localhost:5432/interview
+DATABASE_URL=
+
+# Optional: auto-import `server/records.json` into Postgres on server startup.
+# Safety: it only runs when the DB has 0 sessions and no migration marker is present.
+AUTO_MIGRATE_RECORDS_JSON=true
+
 # Server port (default: 4000)
 PORT=4000
 
