--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "main": "index.js",
   "scripts": {
-    "dev": "node --watch index.js"
+    "dev": "node --watch index.js",
+    "migrate:records-json": "node scripts/migrate-records-json-to-postgres.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -12,6 +13,7 @@
     "multer": "^1.4.5-lts.1",
     "jsonwebtoken": "^9.0.0",
     "cloudinary": "^1.32.0",
-    "undici": "^5.17.0"
+    "undici": "^5.17.0",
+    "pg": "^8.13.1"
   }
 }
